assets/css/style.scss
---
# this ensures Jekyll reads the file to be transformed into CSS later
---

// Colors
$primary: #61b7cf;
$secondary: #6c757d;
$black: #2f2f41;
$white: #ffffff;
$white-offset: #f1f7ff;
$steel: #5C5A5A;

// Links
$link-color: $primary;
$link-decoration: none;
$link-hover-color: lighten($primary, 10%);
$link-hover-decoration: underline;

// Fonts
$font-family-base: Helvetica, Arial, sans-serif, -apple-system;
$font-family-heading: 'Montserrat', serif, -apple-system;

// Footer
$footer-background-color: $primary;
$footer-text-color: $white;
$sub-footer-background-color: darken($primary, 10%);
$sub-footer-text-color: $white;

// Bootstrap
@import 'bootstrap-variables';
@import 'bootstrap/bootstrap-reboot';
@import 'bootstrap/bootstrap-grid';
@import 'bootstrap/utilities/text';
// @import 'bootstrap/bootstrap'; // Uncomment this line to import the entire Bootstrap library


// Libraries
@import 'libraries/hamburgers/hamburgers';

// Components
@import 'components/type';
@import 'components/page';
@import 'components/header';
@import 'components/footer';
@import 'components/sub-footer';
@import 'components/logo';
@import 'components/main-menu';
@import 'components/main-menu-mobile';
@import 'components/hamburger';
@import 'components/buttons';
@import 'components/call';
@import 'components/title';
@import 'components/content';
@import 'components/intro';
@import 'components/intro-image';
@import 'components/strip';
@import 'components/benefit';
@import 'components/social';

// Pages
@import 'pages/home';

body {
  font-size: 16px;
  line-height: 1.2;
  font-family: $font-family-base;
  @include media-breakpoint-up(md) {
    font-size: 16px;
    line-height: 1.3;
  }
}

.section-title {
  font-size: 40px;
  font-weight: 790;
  margin: 0;
  text-align:center;
}

